# fluorite

./: .earthlyignore  .gitignore  Earthfile  README.md
attestation-transparency-service/: Cargo.toml  Dockerfile  README.md
attestation-transparency-service/src/: api.rs  main.rs  web_error.rs
domain-monitor/: Cargo.toml  Dockerfile  README.md
domain-monitor/.cargo/: config.toml
domain-monitor/src/: api.rs  main.rs
domain-monitor/static/: index.html  script.js
fluorite-baremetal-cli/: .gitignore  Cargo.toml  README.md
fluorite-baremetal-cli/src/: guest.rs  host.rs  main.rs
fluorite-cli/: Cargo.toml  README.md  user-data.json
fluorite-cli/scripts/: launch-vm.sh
fluorite-cli/src/: artifact_manager.rs  guest.rs  host.rs  main.rs  utils.rs
gcp-shielded-vm-notarizer/: Cargo.toml  README.md
gcp-shielded-vm-notarizer/src/: api.rs  attestation.rs  gcp_api.rs  main.rs  server_tls_config.rs  web_error.rs
libraries/: Cargo.toml
libraries/attestation/: Cargo.toml  README.md
libraries/attestation/attestation/: Cargo.toml  README.md
libraries/attestation/attestation/src/: cbor.rs  eventlog.rs  lib.rs  msg.rs
libraries/attestation/attestation/test_data/: bad_quote.json  gcp_quote.json  quote_with_plain_sig.json  shielded_vm_pub_key.pem
libraries/attestation/attestation/test_data/cert_chain/: ak_intermediate_ca.crt
libraries/attestation/azure-cvm-attestation/: Cargo.toml
libraries/attestation/azure-cvm-attestation/src/: lib.rs
libraries/attestation/azure-cvm-attestation/src/common/: json_base64.rs  json_base64url.rs  maa_jwt.rs  mod.rs
libraries/attestation/azure-cvm-attestation/src/generate/: eph_key_tpm.rs  imds_operations.rs  mod.rs  tpm.rs  vtpm.rs
libraries/attestation/azure-cvm-attestation/src/verify/: mod.rs
libraries/attestation/azure-cvm-attestation/test_data/: attestation_claim.json  attestation_document.json  attestation_info.json  response_struct.json
libraries/attestation/azure-trusted-launch-attestation/: Cargo.toml
libraries/attestation/azure-trusted-launch-attestation/src/: lib.rs
libraries/attestation/azure-trusted-launch-attestation/src/common/: intermediate_ca_03.crt  mod.rs
libraries/attestation/azure-trusted-launch-attestation/src/generate/: collateral.rs  mod.rs
libraries/attestation/azure-trusted-launch-attestation/src/verify/: collateral.rs  mod.rs
libraries/attestation/azure-trusted-launch-attestation/test_data/: azure_trusted_launch_vm_attestation_document.json  azure_trusted_launch_vm_attestation_document_expired.json  cert_chain.pem  cert_chain_expired.pem
libraries/attestation/gcp-cvm-attestation/: Cargo.toml
libraries/attestation/gcp-cvm-attestation/src/: lib.rs
libraries/attestation/gcp-cvm-attestation/src/common/: mod.rs
libraries/attestation/gcp-cvm-attestation/src/generate/: collateral.rs  mod.rs
libraries/attestation/gcp-cvm-attestation/src/verify/: collateral.rs  mod.rs
libraries/attestation/gcp-shielded-vm-attestation/: Cargo.toml  gcp_notarizer_measurements_example.json
libraries/attestation/gcp-shielded-vm-attestation/src/: lib.rs
libraries/attestation/gcp-shielded-vm-attestation/src/common/: mod.rs
libraries/attestation/gcp-shielded-vm-attestation/src/generate/: mod.rs
libraries/attestation/gcp-shielded-vm-attestation/src/verify/: mod.rs
libraries/attestation/gcp-shielded-vm-attestation/test_data/: gcp_cvm_eventlog.json  gcp_shielded_vm_attestation_document.json
libraries/attestation/qemu-attestation/: Cargo.toml
libraries/attestation/qemu-attestation/src/: lib.rs
libraries/attestation/qemu-attestation/src/common/: ca.cert.pem  intermediate_ca.crt  mod.rs
libraries/attestation/qemu-attestation/src/generate/: collateral.rs  mod.rs
libraries/attestation/qemu-attestation/src/verify/: mod.rs
libraries/attestation/svsm-sev-attestation/: Cargo.toml
libraries/attestation/svsm-sev-attestation/src/: lib.rs
libraries/attestation/svsm-sev-attestation/src/common/: mod.rs
libraries/attestation/svsm-sev-attestation/src/generate/: configtsm.rs  mod.rs
libraries/attestation/svsm-sev-attestation/src/verify/: collateral.rs  mod.rs
libraries/attestation/svsm-sev-attestation/test_data/: ak_pub_key_example.pem  amd_sev_snp_vm_attestation_document.json  gcp_cvm_attestation_document.json
libraries/attestation/tpm-quote/: Cargo.toml  README.md
libraries/attestation/tpm-quote/src/: lib.rs
libraries/attestation/tpm-quote/src/common/: constants.rs  error.rs  mod.rs
libraries/attestation/tpm-quote/src/generate/: mod.rs
libraries/attestation/tpm-quote/test_data/: gcp_cvm_attestation_document.json  gcp_quote.json
libraries/attestation/tpm-structs/: Cargo.toml  README.md  tables.patch
libraries/attestation/tpm-structs/src/: lib.rs
libraries/attested-server-verifier/: Cargo.toml
libraries/attested-server-verifier/src/: lib.rs  verifier.rs
libraries/attested-server-verifier/test_data/: cert.pem  cluster_attestation.b64
libraries/cloud-helpers/: Cargo.toml  README.md
libraries/cloud-helpers/src/: azure_helper.rs  lib.rs
libraries/provisioning-structs/: Cargo.toml  README.md
libraries/provisioning-structs/src/: lib.rs  structs.rs
measurements/: measurements_azure.json  (+5 more)
multinode-provisioning/examples/client/: Cargo.toml  README.md  cert.pem  run.sh  rust-toolchain.toml
multinode-provisioning/examples/client/src/: main.rs
multinode-provisioning/server/: Cargo.toml  README.md
multinode-provisioning/server/.devcontainer/: devcontainer.json
multinode-provisioning/server/src/: api.rs  main.rs  server_tls_acceptor.rs  server_tls_config.rs  tpm.rs  web_error.rs
operator/azure-disk-upload/: README.md  main.py  pyproject.toml
operator/fluorite-azure-cli/: README.md  main.py  pyproject.toml
operator/fluorite-cli/: Cargo.toml  README.md
operator/fluorite-cli/src/: client_tls_config.rs  generate_certificates.rs  main.rs
operator/setup-attestation-infra/: README.md  attestation-infra.json  main.py  pyproject.toml  utils.py
operator/upload-os-image/: README.md  main.py  pyproject.toml
operator/vm-cli/: README.md  cluster.json  main.py  pyproject.toml
(+73 files in other folders)
