[package]
name = "fluorite-cli"
version = "0.1.0"
edition = "2024"
authors = ["Yassine"]
description = "SEV-SNP cli setup Tool for baremetal"


[[bin]]
name = "fluorite-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive", "string"] }
sev = { version = "6.2.1", default-features = false, features = ["snp"] }
log = "0.4.28"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
glob = "0.3.3"
inquire = "0.9.1"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["blocking"] }
sysinfo = "0.37.2"
