[package]
name = "gcp-shielded-vm-notarizer"
version = "0.1.0"
edition = "2024"
authors = ["Mithril Security Contributors"]

[dependencies]
# Web framework
axum = "0.8.4"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
tokio = { version = "1.45.0", features = ["full"] }
tower-http = { version = "0.6.4", features = ["trace"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# Crypto and TLS
rustls = { version = "0.23.27", features = ["ring"], default-features = false }
rcgen = "0.14"
rustls-pki-types = "1.11.0"

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
base64 = "0.22.1"

# Errors and logging
anyhow = "1.0.98"
log = "0.4.27"

# HTTP client for GCP API
reqwest = { version = "0.12.19", default-features = false, features = [
    "rustls-tls",
    "json",
] }

# GCP authentication
gcp_auth = "0.12"

# Local attestation libraries
attestation = { path = "../libraries/attestation/attestation", features = ["tss-esapi"] }
gcp-cvm-attestation = { path = "../libraries/attestation/gcp-cvm-attestation", features = ["generate"] }
tpm-quote = { path = "../libraries/attestation/tpm-quote" }


# Configuration
clap = { version = "4", features = ["derive"] }

# Hex encoding for display
hex = "0.4.3"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Derive macros
derive_more = { version = "2.0.1", features = ["from", "try_into"] }

# Signing (using dryoc like the rest of the project)
dryoc = { version = "0.7.0", features = ["serde"] }
