[package]
name = "cloud-helpers"
version = "0.1.0"
edition = "2024"
authors = ["Mithril Security Contributors"]

[dependencies]
azure_core = "0.21.0"
azure_identity = "0.21.0"
azure_mgmt_resources = "0.21.0"
azure_mgmt_storage = "0.21.0"
azure_storage_blobs = "0.21.0"
azure_svc_blobstorage = "0.21.0"
azure_storage = "0.21.0"
anyhow = "1.0.96"
serde_json = "1.0.140"
tokio = {version = "1.45.0", features = ["full"] }
url = "2.5.4"
reqwest = "0.12.12"
log = "0.4.27"