[package]
name = "provisioning-structs"
version = "0.1.0"
edition = "2024"
authors = ["Mithril Security Contributors"]

[features]
validate-attestation-documents = [
    "azure-trusted-launch-attestation/verify",
    "azure-cvm-attestation/verify",
    "gcp-shielded-vm-attestation/verify",
    "qemu-attestation/verify",
    "svsm-sev-attestation/verify",
]

[dependencies]
anyhow = "1.0.96"
sha2 = "0.10.8"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
rcgen = "0.14.3"
log = "0.4.27"
attestation = { path = "../attestation/attestation" }
tpm-quote = { path = "../attestation/tpm-quote" }
azure-trusted-launch-attestation = { path = "../attestation/azure-trusted-launch-attestation", default-features = false }
azure-cvm-attestation = { path = "../attestation/azure-cvm-attestation", default-features = false }
gcp-shielded-vm-attestation = { path = "../attestation/gcp-shielded-vm-attestation", default-features = false }
qemu-attestation = { path = "../attestation/qemu-attestation", default-features = false }
svsm-sev-attestation = { path = "../../libraries/attestation/svsm-sev-attestation", default-features = false }
dryoc = { version = "0.7.0", features = ["serde"] }
x509-parser = "0.18.0"
hex = "0.4.3"
rustls-pki-types = "1.12.0"
tokio = { version = "1.45.0", features = ["full"] }
