[project]
name = "upload-os-image"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-identity>=1.25.1",
    "azure-mgmt-compute>=37.1.0",
    "azure-mgmt-resource>=24.0.0",
    "azure-mgmt-storage>=24.0.0",
    "azure-storage-blob>=12.28.0",
    "packaging>=25.0",
]
