[package]
name = "attestation"
version = "0.1.0"
edition = "2021"
authors = ["Mithril Security Contributors"]
license = "Apache-2.0"

[features]
default = []
tss-esapi = ["tpm-quote/generate", "dep:tss-esapi"]


[dependencies]
tpm-quote = { path = "../tpm-quote", default-features = false }
log = "0.4.22"
serde = { version = "1.0.214", features = ["derive"] }
fn-error-context = "0.2.1"
async-trait = "0.1.83"

anyhow = { version = "1.0.93" }

tss-esapi = { version = "7.5.1", optional = true }

dryoc = { version = "0.7.0", features = ["serde"] }
ciborium = "0.2.2"
derive_more = { version = "2.0.1", features = ["from", "try_into"] }
sha2 = "0.10.8"
digest = "0.10.7"
hex = "0.4.3"
rustls-pki-types = "1.12.0"
serde_with = { version = "3.16.1", features=["base64", "json"]}

[dev-dependencies]
insta = "1.41.1"
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["macros"] }
