[package]
name = "azure-cvm-attestation"
version = "0.1.0"
edition = "2021"
authors = ["Mithril Security Contributors"]

[features]
default = ["generate", "verify"]
generate = [
    "dep:reqwest",
    "dep:tss-esapi",
    "attestation/tss-esapi"
]
verify = [
    "dep:reqwest",
    "dep:rustls-webpki",
    "tpm-quote/verify"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
attestation = { path = "../attestation", default-features = false}
tpm-quote = {path = "../tpm-quote", default-features = false}
anyhow = "1.0.96"
async-trait = "0.1.83"
az-cvm-vtpm = { version = "0.6.0", default-features = false }
base64 = "0.22.1"
bincode = "1.3.3"
env_logger = "0.11.3"
fn-error-context = "0.2.1"
jsonwebtoken = "=9.3.0"
log = "0.4.22"
memoffset = "0.9.1"
reqwest = { version="0.12.5", default-features= false, features=["rustls-tls", "json"], optional=true }
ring = "0.17.8"
rustls-webpki = { version="0.102.5", optional=true}
serde = { version = "1.0.195", features = ["derive"] }
serde-big-array = "0.5.1"
serde_json = "1.0.120"
sev = "1.2.1"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features=["full"]}
tss-esapi = { version="7.5.1", optional=true }
webpki-roots = "0.26.3"
gpu_attestation_server = {path = "./src/common/gpu_attestation_server"}
rustls-pki-types = "1.13.0"
cbc = "0.1.2"
aes = "0.8.4"
hex = "0.4.3"
hmac = "0.12.1"
sha2 = "0.10.9"
x509-parser = "0.18.0"
rsa = "0.9.9"
pkcs8 = "0.10.2"
serde_with = { version = "3.16.1", features=["base64", "json"]}
chrono = "0.4.42"


[dev-dependencies]
insta = "1.40.0"
serde_json = "*"
tokio = { version = "*", features = ["macros","rt"] }
