[package]
name = "gcp-shielded-vm-attestation"
version = "0.1.0"
edition = "2021"
authors = ["Mithril Security Contributors"]

[features]
default = ["generate", "verify"]
generate = [
    "dep:tss-esapi",
    "attestation/tss-esapi",
    "dep:reqwest",
    "tpm-quote/generate",
]
verify = [
    "tpm-quote/verify",
    "gcp-cvm-attestation/verify",
]

[dependencies]
attestation = { path = "../attestation", default-features = false }
tpm-quote = { path = "../tpm-quote", default-features = false }
gcp-cvm-attestation = { path = "../gcp-cvm-attestation", default-features = false }

log = "0.4.22"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0"
fn-error-context = "0.2.1"
async-trait = "0.1.83"
anyhow = { version = "1.0.89" }
derive_more = { version = "2.0.1", features = ["from", "try_into"] }
dryoc = { version = "0.7.0", features = ["serde"] }
sha2 = "0.10"

tss-esapi = { version = "7.5.1", optional = true }
reqwest = { version = "0.12.8", default-features = false, features = ["rustls-tls", "json"], optional = true }

# For verification time handling
rustls-pki-types = "1.11.0"

[dev-dependencies]
tokio = { version = "*", features = ["macros"] }
serde_json = "*"
insta = "1.40.0"
