[package]
name = "qemu-attestation"
version = "0.1.0"
edition = "2024"
authors = ["Mithril Security Contributors"]

[features]
default = ["generate", "verify"]
generate = ["dep:tss-esapi", "attestation/tss-esapi", "dep:rustls-pki-types"]
verify = [
    "dep:const-oid",
    "dep:rustls-webpki",
    "dep:rustls-pki-types",
    "tpm-quote/verify",
]

[dependencies]
attestation = { path = "../attestation", default-features = false }
tpm-quote = { path = "../tpm-quote", default-features = false }
log = "0.4.22"
serde = { version = "1.0.214", features = ["derive"] }
fn-error-context = "0.2.1"
async-trait = "0.1.83"

anyhow = "1.0.89"

tss-esapi = { version = "7.5.1", optional = true }

const-oid = { version = "0.9.6", features = ["db"], optional = true }
rustls-webpki = { version = "0.103.6", features = [
    "alloc",
    "ring",
], optional = true }
rustls-pki-types = { version = "1.11.0", optional = true }
sha2 = "0.10.8"
pem = "3.0.4"
tpm-structs = { path = "../tpm-structs" }

serde_json = "1.0.139"
serde_with = { version = "3.14.0", features = ["base64"] }

[dev-dependencies]
insta = "1.40.0"
tokio = { version = "*", features = ["macros", "rt"] }
