[package]
name = "svsm-sev-attestation"
version = "0.1.0"
edition = "2021"
authors = ["Mithril Security Contributors"]


[features]
default = ["generate", "verify"]
generate = [
    "dep:tss-esapi",
    "attestation/tss-esapi",
]
verify = [
    "dep:rustls-webpki",
    "tpm-quote/verify",
]

[dependencies]
attestation = { path = "../attestation", default-features = false }
tpm-quote = { path = "../tpm-quote", default-features = false }
serde = { version = "1.0.214", features = ["derive"] }
serde_with = { version = "3.14.0", features = ["base64", "hex"] }
fn-error-context = "0.2.1"
async-trait = "0.1.83"
anyhow = { version = "1.0.89" }
x509-parser = { version = "0.18.0" }
tss-esapi = { version = "7.5.1", optional = true }
rustls-webpki = { version = "0.103.6", optional = true }
sha2 = "0.10.8"
sev = { version = "6.3.1", default-features = false, features = [
    'crypto_nossl',
    'snp',
] }
bincode = "1.3.3"
hex = "0.4.3"
asn1-rs = "0.7.1"
serde_json = "1.0.140"
rustls-pki-types = "1.12.0"
log = "0.4.28"
reqwest = "0.12.23"
ring = "0.17.8"

[dev-dependencies]
insta = "1.40.0"
serde_json = "1.0.140"
pem = "3"
tokio = { version = "*", features = ["macros", "rt"] }
